# rust-p2p-chat

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
cli_main/: Cargo.toml
cli_main/src/: main.rs
cli_read/: Cargo.toml
cli_read/src/: lib.rs
cli_shared/: Cargo.toml
cli_shared/src/: default_values.rs  lib.rs  models.rs  peers.rs
cli_write/: Cargo.toml
cli_write/src/: lib.rs
src/: main.rs
