[package]
name = "rust-p2p-chat"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Desjardins <mrdesjardins@gmail.com>"]
homepage = "https://github.com/MrDesjardins/rust-p2p-chat"
repository = "https://github.com/MrDesjardins/rust-p2p-chat"
license = "Apache-2.0"
keywords = ["chat", "p2p", "client-server", "communication", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cli_read = {path = "../cli_read"}
cli_write = {path = "../cli_write"}
cli_shared = {path = "../cli_shared"}